site structure almost ready; almost complete site

--- a/_projects/creolet.html
+++ b/_projects/creolet.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: project
 title: "Creolet"
 description: "Simple Diary Entry Messenger Chat-Bot"
 tech: 
@@ -8,4 +8,18 @@ tech:
   - flask
 ---
 
-fdafddfadf
+<p class="description-content">Creolet is a chat-bot deployed on Facebook Messenger to record diary entries in form of text and other multimedia, in a database hosted on Heroku. The database server uses <a href="https://palletsprojects.com/p/flask/">flask</a> to serve database queries.</p>
+<p class="description-content"> There are multiple components involved-</p>
+<ul class="description-content">
+	<li>Chat-bot Deployment on Facebook</li>
+	<li>Webhook written in python</li>
+	<li>Microsoft LUIS API for NLP</li>
+	<li>A Database</li>
+	<li>A Database Server</li>
+	<li>A Hosting Platform</li>
+</ul>
+
+<div class="d-flex mt-5 justify-content-around">
+	<a href="https://projectpages.github.io/project-pages/"><button type="button" class="btn btn-lg btn-primary">Documentation</button></a>
+	<button type="button" class="btn btn-lg btn-primary">Source Code</button>
+</div>
