--- a/_projects/finite_element_analysis.html
+++ b/_projects/finite_element_analysis.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: project
 title: "Finite Element Analysis"
 description: "FEA Program for solving bars, beams, and truss"
 tech: 
