--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-layout: page
-title: "Posts"
+layout: home
+title: "Hi, There"
 ---
 
-{% for post in paginator.posts %}
+{% for post in site.posts %}
 	<div class="py-5 px-4 w-100 border-bottom">
 		<a href="{{ post.url | relative_url | escape }}">
 		<h1 class="list_item_heading">{{ post.title }}</h1>
@@ -13,6 +13,6 @@ title: "Posts"
 			<h4 class="list_item_subheading">{{post.excerpt | strip_html | truncatewords: 10 }}</h4>
 		{% endif %}
 	</a>
-	<p><span style="color: #9a1750; font-weight: bold;">Posted By</span>      {{post.author}} on {{ post.date | date: '%B %d, %Y' }} </p>
-</div>
+	<p><span style="color: #9a1750; font-weight: bold;">Posted By</span>      {{post.author}} on {{ post.date | date: '%B %d, %Y' }}</p>
+	</div>
 {% endfor %}
