--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@ layout: home
 title: "Hi, There"
 ---
 
-{% for post in site.posts %}
-	<div class="py-5 px-4 w-100 border-bottom">
-		<a href="{{ post.url | relative_url | escape }}">
-		<h1 class="list_item_heading">{{ post.title }}</h1>
-		{% if post.description %}
-			<h4 class="list_item_subheading">{{post.description}}</h4>
-		{% else %}
-			<h4 class="list_item_subheading">{{post.excerpt | strip_html | truncatewords: 10 }}</h4>
-		{% endif %}
-	</a>
-	<p><span style="color: #9a1750; font-weight: bold;">Posted By</span>      {{post.author}} on {{ post.date | date: '%B %d, %Y' }}</p>
-	</div>
-{% endfor %}
+
+<p class="description-content">
+	Hi, I am Abhay.<br> <br>
+	I am currently pursuing Bachelors of Technology in Mechanical Engineering, at Indian Institute of Technology, Guwahati.
+
+ </p>
+
