dark mode, neon light theme

--- a/_projects/creolet.html
+++ b/_projects/creolet.html
@@ -20,6 +20,6 @@ tech:
 </ul>
 
 <div class="d-flex mt-5 justify-content-around">
-	<a href="https://projectpages.github.io/project-pages/"><button type="button" class="btn btn-lg btn-primary">Documentation</button></a>
-	<button type="button" class="btn btn-lg btn-primary">Source Code</button>
+	<a href="https://projectpages.github.io/project-pages/"><button type="button" class="btn btn-lg">Documentation</button></a>
+	<button type="button" class="btn btn-lg">Source Code</button>
 </div>
