--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@ title: "Hi, There"
 
 
 <p class="description-content">
-	Hi, I am Abhay.<br> <br>
-	I am currently pursuing Bachelors of Technology in Mechanical Engineering, at Indian Institute of Technology, Guwahati.
+	Hi, I am Abhay, currently pursuing Bachelors of Technology in Mechanical Engineering, at Indian Institute of Technology, Guwahati.
 
  </p>
 
