--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@ title: "Projects"
 <div class="d-flex flex-column">
 
 	{% for project in site.projects %}
-	<div class="py-5 px-4 w-100 border-bottom">
+	<div class="py-3 px-4 w-100">
 		<a href="{{ project.url | relative | escape }}">
 		<h1 class="list_item_heading">{{ project.title }}</h1>
 		<h4 class="list_item_subheading">{{project.description}}</h4>
